# cpp-intro

./: CMakeLists.txt  README.md
.github/workflows/: deploy_github_page.yml
notebooks/basics/: 01_hello_world.ipynb  02_greet.ipynb  03_funktionen.ipynb  04_datentypen.ipynb  05_if_then_else.ipynb  06_schleifen.ipynb  07_klassen.ipynb
notebooks/clock/: clock.ipynb
src/: CMakeLists.txt
src/clock/: CMakeLists.txt  conversions.cpp  conversions.h  main.cpp
src/greet/: CMakeLists.txt  greet.cpp  main.cpp  read_name.cpp  read_name.h
src/hello_world/: CMakeLists.txt
